--- a/app/src/main/res/layout/custom_grid_component.xml
+++ b/app/src/main/res/layout/custom_grid_component.xml
@@ -4,12 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/poster_view"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_gravity="center" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/movie_name"
-        android:hint="movie name"
-        android:layout_marginTop="8dp"/>
+        android:layout_width="128dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:hint="movie name" />
 
 </LinearLayout>
