--- a/app/src/main/res/layout/activity_movie_info.xml
+++ b/app/src/main/res/layout/activity_movie_info.xml
@@ -18,7 +18,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Movie name"
             android:id="@+id/movie_name_view"
             android:layout_marginTop="8dp"
             android:layout_toRightOf="@id/movie_poster_view"
@@ -29,7 +28,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/age_view"
-            android:hint="A"
             android:layout_toRightOf="@id/movie_poster_view"
             android:layout_below="@id/movie_name_view"
             android:layout_marginTop="16dp"
@@ -41,7 +39,6 @@
             android:id="@+id/rating_view"
             android:layout_toRightOf="@id/movie_poster_view"
             android:layout_below="@id/age_view"
-            android:hint="10/10"
             android:layout_marginTop="16dp"
             />
 
@@ -69,7 +66,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/genre_1"
                 android:layout_marginRight="8dp"
-                android:hint="genre1"
                 />
 
             <TextView
@@ -77,7 +73,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/genre_2"
                 android:layout_marginRight="8dp"
-                android:hint="genre2"
                 />
 
             <TextView
@@ -85,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/genre_3"
                 android:layout_marginRight="8dp"
-                android:hint="genre3"/>
+                />
 
         </LinearLayout>
 
@@ -109,7 +104,6 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_view"
-           android:hint="00-00-0000"
            android:layout_marginLeft="16dp"
            />
 
@@ -135,7 +129,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/movie_runtime_view"
-            android:hint="0 hrs 0 minutes"
             android:layout_marginLeft="16dp"
             />
 
@@ -144,22 +137,21 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="nice movie"
         android:id="@+id/movie_desc_view"
         android:layout_below="@id/runtime_layout"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="8dp"
         />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/credits_button"
-        android:layout_below="@id/movie_desc_view"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        android:text="View Credits"
-        />
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_below="@id/movie_desc_view"
+       android:layout_marginLeft="8dp"
+       android:layout_marginTop="16dp"
+       android:text="Credits"
+       android:id="@+id/credits_view"
+       />
 
 </RelativeLayout>
 
