--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,29 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/content_frame"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.shashvatkedia.movieapi.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
 
-    <FrameLayout
-        android:id="@+id/content_frame"
+    <GridView
+        android:id="@+id/namegrid"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:numColumns="2" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:minHeight="20dip"
-            android:maxHeight="20dip"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            style="@android:style/Widget.ProgressBar.Horizontal"/>
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/namegrid"/>
-        </FrameLayout>
 
 </RelativeLayout>
