--- a/app/src/main/res/layout/activity_custom_search.xml
+++ b/app/src/main/res/layout/activity_custom_search.xml
@@ -1,7 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/custom_search_layout">
+
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:id="@+id/progress_layour">
+
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/progress_anim"
+        android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:visibility="gone"
+    app:indicatorName="BallGridPulseIndicator"
+    app:indicatorColor="@color/colorPrimaryDark"
+    />
+
+    </RelativeLayout>
 
     <TextView
         android:layout_width="wrap_content"
