--- a/app/src/main/res/layout/activity_movie_recomendation.xml
+++ b/app/src/main/res/layout/activity_movie_recomendation.xml
@@ -6,5 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.example.shashvatkedia.movieapi.MovieRecomendation">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/name"/>
 
 </RelativeLayout>
