--- a/app/src/main/res/layout/activity_movie_info.xml
+++ b/app/src/main/res/layout/activity_movie_info.xml
@@ -169,6 +169,31 @@
         android:layout_marginTop="16dp"
         />
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/view_Trailer"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="16dp"
+                android:text="Reviews"
+                android:id="@+id/reviewsTextView"
+                />
+
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/reviewsList"
+                android:layout_below="@id/reviewsTextView"
+                />
+
+        </RelativeLayout>
+
 </RelativeLayout>
 
 </ScrollView>
