--- a/app/src/main/res/layout/custom_grid_component.xml
+++ b/app/src/main/res/layout/custom_grid_component.xml
@@ -16,6 +16,7 @@
         android:layout_height="32dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
+        android:textSize="25sp"
         android:hint="movie name" />
 
 </LinearLayout>
