--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:title="Settings"
+        android:id="@+id/settingsMenuItem"
+        />
+
+    <item
         android:title="Suggestions"
         android:id="@+id/suggestions_tile"
         />
