--- a/app/src/main/res/layout/activity_movie_info.xml
+++ b/app/src/main/res/layout/activity_movie_info.xml
@@ -9,6 +9,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            >
+
+            <fragment
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:id="@+id/recommendedMovieFragment"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:id="@+id/dummyTextFile"
+                android:visibility="invisible"
+                />
+
+        </LinearLayout>
+
         <ImageView
             android:layout_width="160dp"
             android:layout_height="160dp"
@@ -169,15 +192,27 @@
         android:layout_marginTop="16dp"
         />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/recommendedMovieTextView"
+            android:text="Recommended Movie"
+            android:layout_below="@id/view_Trailer"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="16dp"
+            />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/view_Trailer"
-            android:id="@+id/posterViewPagerLinearLayout">
+            android:layout_below="@id/recommendedMovieTextView"
+            android:id="@+id/posterViewPagerLinearLayout"
+            android:layout_marginTop="16dp">
 
             <android.support.v4.view.ViewPager
                 android:layout_width="match_parent"
                 android:layout_height="128dp"
+                android:visibility="gone"
                 android:id="@+id/posterViewPager"/>
 
         </LinearLayout>
