Added Latest and Now Playing movies

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,6 +3,14 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/Latest"
+            android:title="Latest"
+            />
+        <item
+            android:id="@+id/NowPlaying"
+            android:title="Now Playing"
+            />
+        <item
             android:id="@+id/Popular"
             android:title="Popular" />
         <item
