--- a/app/src/main/res/layout/activity_trailer.xml
+++ b/app/src/main/res/layout/activity_trailer.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.shashvatkedia.movieapi.trailer">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textSize="25sp"
+        android:text="No Trailers Found"
+        android:id="@+id/noTrailerView"
+        android:gravity="center"
+        />
+
     <ListView
         android:layout_width="368dp"
         android:layout_height="495dp"
-        android:id="@+id/trailer_list"
+        android:id="@+id/trailerListView"
+        android:visibility="gone"
         tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
